--- a/index.html
+++ b/index.html
@@ -22,8 +22,38 @@
   </head>
 
   <body>
-    <h1>Bittrex API</h1>
 
-    <button type="button" id="reloadBittrex"> Reload </button>
+     <div class="container main">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          Bittrex
+        </div>
+        <div class="panel-body">
+          <button type="button" class="btn btn-default btn-xs" id="reloadBittrex">Reload</button>
+        </div>
+
+        <table id="bittrexTable" class="table table-bordered table-hover table-condensed">
+          <thead>
+            <tr>
+              <th>Ask</th>
+              <th>Base Volume</th>
+              <th>Bid</th>
+              <th>Created</th>
+              <th>High</th>
+              <th>Last</th>
+              <th>Low</th>
+              <th>Market Name</th>
+              <th>Open Buy Orders</th>
+              <th>Open Sell Orders</th>
+              <th>Prev Day</th>
+              <th>Time Stamp</th>
+              <th>Volume</th>
+            </tr>
+          </thead>
+          <tbody>
+          </tbody>
+        </table>
+      </div>
+    </div>
   </body>
 </html>
