--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <body>
 
-     <div class="container main">
+     <div class="container main" style="width:100%">
       <div class="panel panel-default">
         <div class="panel-heading">
           Bittrex
