--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Bittrex API</title>
+    <title>Bittrex API (You need to enable CORS within the browser)</title>
 
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 
@@ -35,14 +35,14 @@
         <table id="bittrexTable" class="table table-bordered table-hover table-condensed">
           <thead>
             <tr>
+              <th>Market Name</th>
+              <th>Last</th>
               <th>Ask</th>
               <th>Base Volume</th>
               <th>Bid</th>
               <th>Created</th>
               <th>High</th>
-              <th>Last</th>
               <th>Low</th>
-              <th>Market Name</th>
               <th>Open Buy Orders</th>
               <th>Open Sell Orders</th>
               <th>Prev Day</th>
