Enable CORS warning

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Bittrex API (You need to enable CORS within the browser)</title>
+    <title>Bittrex API</title>
 
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 
@@ -26,7 +26,7 @@
      <div class="container main" style="width:100%">
       <div class="panel panel-default">
         <div class="panel-heading">
-          Bittrex
+          Bittrex (You need to enable CORS within the browser)
         </div>
         <div class="panel-body">
           <button type="button" class="btn btn-default btn-xs" id="reloadBittrex">Reload</button>
